infra/cloudformation.json
{
    "AWSTemplateFormatVersion": "2010-09-09",
    "Parameters": {
        "EnvironmentName": {
            "Description": "This is a prefixed to resource names",
            "Type": "String",
            "Default": "Kubernetes"
        },
        "VpcCIDER": {
            "Type": "String",
            "Default": "10.0.0.0/16"
        },
        "PublicSubnet1CIDER": {
            "Type": "String",
            "Default": "10.0.0.0/24"
        },
        "PublicSubnet2CIDER": {
            "Type": "String",
            "Default": "10.0.1.0/24"
        }
      
    },
    "Resources": {
        "UdacityVPC": {
            "Type": "AWS::EC2::VPC",
            "Properties": {
                "CidrBlock": {
                    "Ref": "VpcCIDER"
                },
                "EnableDnsSupport": true,
                "EnableDnsHostnames": true,
                "Tags": [{
                    "Key": "Name",
                    "Value": {
                        "Ref": "EnvironmentName"
                    }
                }]
            }
        },
        "UdacityIGW": {
            "Type": "AWS::EC2::InternetGateway",
            "Properties": {
                "Tags": [{
                    "Key": "Name",
                    "Value": {
                        "Ref": "EnvironmentName"
                    }
                }]
            }
        },
        "VpcIGWAttachment": {
            "Type": "AWS::EC2::VPCGatewayAttachment",
            "Properties": {
                "InternetGatewayId": {
                    "Ref": "UdacityIGW"
                },
                "VpcId": {
                    "Ref": "UdacityVPC"
                }
            }
        },

        "EKSSecurityGroup": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "VpcId": {
                    "Ref": "UdacityVPC"
                },
                "GroupDescription": "EKSSecurityGroup",
                "SecurityGroupIngress": [{
                    "IpProtocol": -1,
                    "FromPort": 0,
                    "ToPort": 65535,
                    "CidrIp": "0.0.0.0/0"
                    
                }],
                "SecurityGroupEgress": [{
                    "IpProtocol": -1,
                    "FromPort": 0,
                    "ToPort": 65535,
                    "CidrIp": "0.0.0.0/0"
                   
                }],
                "Tags": [{
                    "Key": "Name",
                    "Value": {
                        "Fn::Sub": "${EnvironmentName} EKS Security Group"
                    }
                }]
            }
        },
        "PublicSubnet1": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "AvailabilityZone": {
                    "Fn::Select": [
                        "0",
                        {
                            "Fn::GetAZs": {
                                "Ref": "AWS::Region"
                            }
                        }
                    ]
                },
                "CidrBlock": {
                    "Ref": "PublicSubnet1CIDER"
                },
                "VpcId": {
                    "Ref": "UdacityVPC"
                },
                "Tags": [{
                    "Key": "Name",
                    "Value": {
                        "Fn::Sub": "${EnvironmentName} Public Subnet 1 (AZ1)"
                    }
                }]
            }
        },

        "PublicSubnet2": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "AvailabilityZone": {
                    "Fn::Select": [
                        "1",
                        {
                            "Fn::GetAZs": {
                                "Ref": "AWS::Region"
                            }
                        }
                    ]
                },
                "CidrBlock": {
                    "Ref": "PublicSubnet2CIDER"
                },
                "VpcId": {
                    "Ref": "UdacityVPC"
                },
                "Tags": [{
                    "Key": "Name",
                    "Value": {
                        "Fn::Sub": "${EnvironmentName} Public Subnet 2 (AZ2)"
                    }
                }]
            }
        },

        "PublicRouteTable1": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
                "VpcId": {
                    "Ref": "UdacityVPC"
                }
            }
        },
        "PublicRouteTable2": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
                "VpcId": {
                    "Ref": "UdacityVPC"
                }
            }
        },
        "PublicRouteTable1Association": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "RouteTableId": {
                    "Ref": "PublicRouteTable1"
                },
                "SubnetId": {
                    "Ref": "PublicSubnet1"
                }
            }
        },
        "PublicRouteTable2Association": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "RouteTableId": {
                    "Ref": "PublicRouteTable2"
                },
                "SubnetId": {
                    "Ref": "PublicSubnet2"
                }
            }
        },
        "PublicSubnet2Route1": {
            "Type": "AWS::EC2::Route",
            "Properties": {
                "DestinationCidrBlock": "0.0.0.0/0",
                "RouteTableId": {
                    "Ref": "PublicRouteTable2"
                },
                "GatewayId": {
                    "Ref": "UdacityIGW"
                }
            }
        },
        "PublicSubnet1Route1": {
            "Type": "AWS::EC2::Route",
            "Properties": {
                "DestinationCidrBlock": "0.0.0.0/0",
                "RouteTableId": {
                    "Ref": "PublicRouteTable1"
                },
                "GatewayId": {
                    "Ref": "UdacityIGW"
                }
            }
        },
        "EKSProfile": {
            "Type": "AWS::IAM::InstanceProfile",
            "Properties": {
                "Path": "/",
                "Roles": [
                    {
                        "Ref": "EKSRole"
                    }
                ]
            }
        },
        "EKSRole": {
            "Type": "AWS::IAM::Role",
            "Properties": {
                "AssumeRolePolicyDocument": {
                    "Version": "2012-10-17",
                    "Statement": [
                        {
                            "Effect": "Allow",
                            "Principal": {
                                "Service": [
                                    "eks.amazonaws.com"
                                ]
                            },
                            "Action": [
                                "sts:AssumeRole"
                            ]
                        }
                    ]
                },
                "Path": "/",
                "RoleName": "EKSRole",
                "ManagedPolicyArns": [
                    "arn:aws:iam::aws:policy/AmazonEKSClusterPolicy",
                    "arn:aws:iam::aws:policy/AmazonEKSServicePolicy",
                    "arn:aws:iam::aws:policy/ElasticLoadBalancingFullAccess"
                ]
            }
        },
        "ProdCluster": {
            "Type": "AWS::EKS::Cluster",
            "Properties": {
                "Name": "production",
                "Version": "1.14",
                "RoleArn": {
                    "Fn::GetAtt": [
                        "EKSRole",
                        "Arn"
                    ]
                },
                "ResourcesVpcConfig": {
                    "SecurityGroupIds": [{
                        "Ref": "EKSSecurityGroup"
                    }],
                    "SubnetIds": [{
                            "Ref": "PublicSubnet1"
                        },
                        {
                            "Ref": "PublicSubnet2"
                        }
                    ]
                }
            }
        },

        "InstanceSecurityGroup": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "VpcId": {
                    "Ref": "UdacityVPC"
                },
                "GroupDescription": "Instance Security Group",
                "SecurityGroupIngress": [{
                    "IpProtocol": -1,
                    "FromPort": 0,
                    "ToPort": 65535,
                    "CidrIp": "0.0.0.0/0"
                    
                }],
                "SecurityGroupEgress": [{
                    "IpProtocol":"tcp",
                    "FromPort": 0,
                    "ToPort": 65535,
                    "CidrIp": "0.0.0.0/0"
                   
                }],
                "Tags": [{
                    "Key": "Name",
                    "Value": {
                        "Fn::Sub": "${EnvironmentName} Instance Security Group"
                    }
                }]
            }
        },

        "InstanceRole": {
            "Type": "AWS::IAM::Role",
            "Properties": {
                "AssumeRolePolicyDocument": {
                    "Version": "2012-10-17",
                    "Statement": [
                        {
                            "Effect": "Allow",
                            "Principal": {
                                "Service": [
                                    "ec2.amazonaws.com"
                                ]
                            },
                            "Action": [
                                "sts:AssumeRole"
                            ]
                        }
                    ]
                },
                "Path": "/",
                "RoleName": "EKSInstanceRole",
                "ManagedPolicyArns": [
                    "arn:aws:iam::aws:policy/AmazonEKSWorkerNodePolicy",
                    "arn:aws:iam::aws:policy/AmazonEKS_CNI_Policy",
                    "arn:aws:iam::aws:policy/AmazonEC2ContainerRegistryReadOnly"
                ]
            }
        },

        "InstanceProfile": {
            "Type": "AWS::IAM::InstanceProfile",
            "Properties": {
                "Path": "/",
                "Roles": [
                    {
                        "Ref": "InstanceRole"
                    }
                ]
            }
        },

        "AutoScalingGroup1": {
            "Type": "AWS::AutoScaling::AutoScalingGroup",
            "Properties": {
                "MinSize": 1,
                "MaxSize": 1,
                "VPCZoneIdentifier": [
                    {
                        "Ref": "PublicSubnet1"
                    },
                    {
                        "Ref": "PublicSubnet2"
                    }
                ],
                "LaunchConfigurationName": {
                    "Ref": "AutoScalingLuanchConfigInstance"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Sub": "${EnvironmentName} AutoScaling Group 1 (AZ1)"
                        },
                        "PropagateAtLaunch": "true"
                    }
                ]
            }
        },
          "AutoScalingLuanchConfigInstance": {
            "Type": "AWS::AutoScaling::LaunchConfiguration",
            "Properties": {
                "AssociatePublicIpAddress": "False",
                "SecurityGroups": [
                    {
                        "Ref": "InstanceSecurityGroup"
                    }
                ],
                "IamInstanceProfile": {
                    "Ref": "InstanceProfile"
                },
                "BlockDeviceMappings": [
                    {
                        "DeviceName": "/dev/sdk",
                        "Ebs": {
                            "VolumeSize": "10"
                        }
                    }
                ],
                "InstanceType": "t2.micro",
                "ImageId": "ami-0d1cd67c26f5fca19"
            }
        }


    }

}
